# nujoominvoices

./: .env  TAURI_BUILD_INSTRUCTIONS.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
dev-dist/: sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ArchiveFolderManager.tsx  BLDashboardManager.tsx  BLDashboardSelector.tsx  BLPresetsManager.tsx  BankSelector.tsx  CountUp.tsx  DashboardSelector.tsx  EditInvoiceDialog.tsx  ElectricBorder.css  ElectricBorder.tsx  Header.tsx  Layout.tsx  MagicButton.tsx  MagicCard.tsx  NetworkStatusIndicator.tsx  PWAUpdateBanner.tsx  PrintSettingsDialog.tsx  ProtectedRoute.tsx  SettingsBackedSelect.tsx  UsedBLCard.tsx  UsedBLForm.tsx  ZapierSyncDialog.tsx
src/contexts/: AuthContext.tsx  InvoiceContext.tsx  LanguageContext.tsx  SettingsContext.tsx  WarehouseContext.tsx
src/hooks/: use-toast.ts  useAdmin.ts  useArchiveFolderTree.ts  useArchiveFolders.ts  useBLPresets.ts  useCustomers.ts  useNetworkStatus.ts  usePOS.ts  usePWAInstall.ts  useProducts.ts  useRetail.ts  useSoundEffects.ts  useUnusedBL.ts  useUnusedBLSettings.ts  useUsedBL.ts  useVaults.ts
src/lib/: dateUtils.ts  offlineDb.ts  pdfFont.ts  syncManager.ts  validation.ts
src/pages/: AdminPanel.tsx  AuditLog.tsx  Auth.tsx  Contact.tsx  Dashboard.tsx  Insights.tsx  Install.tsx  Inventory.tsx  Login.tsx  NewInvoice.tsx  POS.tsx  POSReports.tsx  PurchaseOrders.tsx  ResetPassword.tsx  Returns.tsx  Settings.tsx  Signup.tsx  Suppliers.tsx  UsedBLEdit.tsx  (+6 more)
supabase/: config.toml
(+53 files in other folders)
