[package]
name = "nujoom-invoices"
version = "1.0.0"
description = "Nujoom Invoices - Professional Invoice Management"
authors = ["Nujoom Alkawakib"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "clipboard-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
